Improve repo quality and clear Sonar findings